// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Type Constructors > maybe type 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_13;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_13(env0, a1) {
  const v0 = "Unit";
  const v1 = {
    just: a1,
    nothing: v0
  };
  return v1;
}
return main();
",
    "elaborated": "λ(a: Type) -> Variant [ just: a, nothing: Unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Maybe"}
[3] lambda {"variable":"a","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[6] lit {"value":{"type":"Atom","value":"Variant"}}
[7] row:ext {"label":"just"}
  :rest -> [9]
  :value -> [8]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] row:ext {"label":"nothing"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Unit"}}
[11] row:empty
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_13
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_13(env0, a1) entry=entry
    entry:
      let v0 = Unit
      let v1 = alloc { just: a1, nothing: v0 }
      return v1",
    "name": "Maybe",
    "normalized": "λ(a: Type) -> (closure: Variant [ just: a, nothing: Unit ] -| Γ: a)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "just";
  const v1 = 42;
  const v2 = {
    __tag: v0,
    payload: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ __tag: just, payload: 42 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"maybeNum"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [5] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"just"}}
[5] lit {"value":{"type":"Num","value":42}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = just
      let v1 = 42
      let v2 = alloc { __tag: v0, payload: v1 }
      return v2",
    "name": "maybeNum",
    "normalized": "Struct [ __tag: just, payload: 42 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant [ just: Num, nothing: Unit ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "nothing";
  const v1 = null;
  const v2 = {
    __tag: v0,
    payload: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ __tag: nothing, payload: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"maybeStr"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [5] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"nothing"}}
[5] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = nothing
      let v1 = unit
      let v2 = alloc { __tag: v0, payload: v1 }
      return v2",
    "name": "maybeStr",
    "normalized": "Struct [ __tag: nothing, payload: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant [ just: String, nothing: Unit ]",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Type Constructors > recursive types — List 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "List",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"List"}
[3] mu {"variable":"x","source":"List","level":1}
  :annotation -> [4]
  :body -> [7]
[4] pi {"variable":"t1","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"a","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
  :env -> [24]
[8] lit {"value":{"type":"Atom","value":"Type"}}
[9] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[10] lit {"value":{"type":"Atom","value":"Variant"}}
[11] row:ext {"label":"cons"}
  :rest -> [21]
  :value -> [12]
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"1"}
  :rest -> [18]
  :value -> [15]
[15] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [16]
[16] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[17] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[18] row:ext {"label":"0"}
  :rest -> [20]
  :value -> [19]
[19] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[20] row:empty
[21] row:ext {"label":"nil"}
  :rest -> [23]
  :value -> [22]
[22] lit {"value":{"type":"Atom","value":"Unit"}}
[23] row:empty
[24] env
  :capture -> [3] {"index":0}
[25] closure
  :body -> [7]
  :env -> [24]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = alloc {  }  // {"erasure":{"tag":"mu","source":"List"}}
      return v0",
    "name": "List",
    "normalized": "List",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "nil";
  const v1 = null;
  const v2 = {
    __tag: v0,
    payload: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ __tag: nil, payload: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"empty"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [5] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"nil"}}
[5] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = nil
      let v1 = unit
      let v2 = alloc { __tag: v0, payload: v1 }
      return v2",
    "name": "empty",
    "normalized": "Struct [ __tag: nil, payload: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "cons";
  const v1 = 1;
  const v2 = "nil";
  const v3 = null;
  const v4 = {
    __tag: v2,
    payload: v3
  };
  const v5 = {
    "0": v1,
    "1": v4
  };
  const v6 = {
    __tag: v0,
    payload: v5
  };
  return v6;
}
return main();
",
    "elaborated": "Struct
  [ __tag: cons,
    payload: Struct [ 0: 1, 1: Struct [ __tag: nil, payload: unit ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"listOf1"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [5] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"cons"}}
[5] struct
  :field -> [6] {"label":"0"}
  :field -> [7] {"label":"1"}
[6] lit {"value":{"type":"Num","value":1}}
[7] struct
  :field -> [8] {"label":"__tag"}
  :field -> [9] {"label":"payload"}
[8] lit {"value":{"type":"Atom","value":"nil"}}
[9] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = cons
      let v1 = 1
      let v2 = nil
      let v3 = unit
      let v4 = alloc { __tag: v2, payload: v3 }
      let v5 = alloc { 0: v1, 1: v4 }
      let v6 = alloc { __tag: v0, payload: v5 }
      return v6",
    "name": "listOf1",
    "normalized": "Struct
  [ __tag: cons,
    payload: Struct [ 0: 1, 1: Struct [ __tag: nil, payload: unit ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "cons";
  const v1 = 1;
  const v2 = "cons";
  const v3 = 2;
  const v4 = "cons";
  const v5 = 3;
  const v6 = "nil";
  const v7 = null;
  const v8 = {
    __tag: v6,
    payload: v7
  };
  const v9 = {
    "0": v5,
    "1": v8
  };
  const v10 = {
    __tag: v4,
    payload: v9
  };
  const v11 = {
    "0": v3,
    "1": v10
  };
  const v12 = {
    __tag: v2,
    payload: v11
  };
  const v13 = {
    "0": v1,
    "1": v12
  };
  const v14 = {
    __tag: v0,
    payload: v13
  };
  return v14;
}
return main();
",
    "elaborated": "Struct
  [ __tag: cons,
    payload: Struct
      [ 0: 1,
        1: Struct
          [ __tag: cons,
            payload: Struct
              [ 0: 2,
                1: Struct
                  [ __tag: cons,
                    payload: Struct
                      [ 0: 3,
                        1: Struct [ __tag: nil, payload: unit ] ] ] ] ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"listOf3"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [5] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"cons"}}
[5] struct
  :field -> [6] {"label":"0"}
  :field -> [7] {"label":"1"}
[6] lit {"value":{"type":"Num","value":1}}
[7] struct
  :field -> [8] {"label":"__tag"}
  :field -> [9] {"label":"payload"}
[8] lit {"value":{"type":"Atom","value":"cons"}}
[9] struct
  :field -> [10] {"label":"0"}
  :field -> [11] {"label":"1"}
[10] lit {"value":{"type":"Num","value":2}}
[11] struct
  :field -> [12] {"label":"__tag"}
  :field -> [13] {"label":"payload"}
[12] lit {"value":{"type":"Atom","value":"cons"}}
[13] struct
  :field -> [14] {"label":"0"}
  :field -> [15] {"label":"1"}
[14] lit {"value":{"type":"Num","value":3}}
[15] struct
  :field -> [16] {"label":"__tag"}
  :field -> [17] {"label":"payload"}
[16] lit {"value":{"type":"Atom","value":"nil"}}
[17] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = cons
      let v1 = 1
      let v2 = cons
      let v3 = 2
      let v4 = cons
      let v5 = 3
      let v6 = nil
      let v7 = unit
      let v8 = alloc { __tag: v6, payload: v7 }
      let v9 = alloc { 0: v5, 1: v8 }
      let v10 = alloc { __tag: v4, payload: v9 }
      let v11 = alloc { 0: v3, 1: v10 }
      let v12 = alloc { __tag: v2, payload: v11 }
      let v13 = alloc { 0: v1, 1: v12 }
      let v14 = alloc { __tag: v0, payload: v13 }
      return v14",
    "name": "listOf3",
    "normalized": "Struct
  [ __tag: cons,
    payload: Struct
      [ 0: 1,
        1: Struct
          [ __tag: cons,
            payload: Struct
              [ 0: 2,
                1: Struct
                  [ __tag: cons,
                    payload: Struct
                      [ 0: 3,
                        1: Struct [ __tag: nil, payload: unit ] ] ] ] ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Type Constructors > recursive types — Peano 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "Peano",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Peano"}
[3] mu {"variable":"x","source":"Peano","level":1}
  :annotation -> [4]
  :body -> [5]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[6] lit {"value":{"type":"Atom","value":"Variant"}}
[7] row:ext {"label":"succ"}
  :rest -> [9]
  :value -> [8]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] row:ext {"label":"zero"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Unit"}}
[11] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = alloc {  }  // {"erasure":{"tag":"mu","source":"Peano"}}
      return v0",
    "name": "Peano",
    "normalized": "Peano",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "zero";
  const v1 = null;
  const v2 = {
    __tag: v0,
    payload: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ __tag: zero, payload: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"zero"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [5] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"zero"}}
[5] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = zero
      let v1 = unit
      let v2 = alloc { __tag: v0, payload: v1 }
      return v2",
    "name": "zero",
    "normalized": "Struct [ __tag: zero, payload: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "succ";
  const v1 = zero;
  const v2 = {
    __tag: v0,
    payload: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ __tag: succ, payload: zero ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"first"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [6] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"succ"}}
[5] var:free {"name":"zero"}
[6] var:ref {"name":"zero"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = succ
      let v1 = zero
      let v2 = alloc { __tag: v0, payload: v1 }
      return v2",
    "name": "first",
    "normalized": "Struct [ __tag: succ, payload: Struct [ __tag: zero, payload: unit ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "succ";
  const v1 = first;
  const v2 = {
    __tag: v0,
    payload: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ __tag: succ, payload: first ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"second"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [6] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"succ"}}
[5] var:free {"name":"first"}
[6] var:ref {"name":"first"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = succ
      let v1 = first
      let v2 = alloc { __tag: v0, payload: v1 }
      return v2",
    "name": "second",
    "normalized": "Struct
  [ __tag: succ,
    payload: Struct
      [ __tag: succ, payload: Struct [ __tag: zero, payload: unit ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
]
`;
